--- a/app/views/analyses/new.html.erb
+++ b/app/views/analyses/new.html.erb
@@ -7,26 +7,7 @@
       <%= f.select :tournament_id, options_for_select( @category_parent_array.map{|c| [c[:name], c[:id]]}),{include_blank:"大会を選択してください"}, { class: "parent_category_box", id: "parent_category_analysis"} %>
       <div class="school">
       </div>
-      <div class="select">
-        <div class="attack">
-          <p>攻撃力</p>
-          <%= f.select :attack,[["A","A"],["B","B"],["C","C"]],include_blank: "選択してください"%>
-        </div>
-        <div class="defencive">
-          <p>守備力</p>
-          <%= f.select :defensive,[["A","A"],["B","B"],["C","C"]],include_blank: "選択してください"%>
-        </div>
-        <div class="pitcher">
-          <p>投手力</p>
-          <%= f.select :pitcher,[["A","A"],["B","B"],["C","C"]],include_blank: "選択してください"%>
-        </div>
-        <div class="comprehensive">
-          <p>総合力</p>
-          <%= f.select :comprehensive,[["A","A"],["B+","B"],["B","C"],["C","D"]],include_blank: "選択してください"%>
-        </div>
-      </div>
-      <%= f.text_area :text, cols: 30 ,rows: 10,placeholder: "分析内容を入力してください",value: "#{@analysis.text}" %>
-      <%= f.submit value: "SENT",class: "game_record"%>
+      <%= render partial: "analysis",locals:{f: f} %>
     <%end%>
       <div class="back">
         <%= link_to "戻る",analyses_path%>
