--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -1,3 +1,3 @@
 <%= render :partial=>"tweets/log"%>
-<%= link_to "トップページへ戻る",tweets_path,class: "return-top"%>
+<%= link_to "記事一覧へ戻る",tweets_path,class: "return-top"%>
 <%= render :partial=>"tweets/tweet_show"%>
