--- a/app/views/tweets/create.html.erb
+++ b/app/views/tweets/create.html.erb
@@ -3,6 +3,6 @@
     <h3>
     投稿が完了しました
     </h3>
-  <%= link_to "トップページへ戻る",tweets_path,class: "btn"%>
+  <%= link_to "記事一覧へ戻る",tweets_path,class: "btn"%>
   </div>
 </div>
