--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -4,7 +4,7 @@
     <%= link_to "記事を削除する","/tweets/#{@tweet.id}",method: :delete,data: { confirm: '削除しますか？' },class: "delete-article"%>
     <%= link_to "記事を編集する","/tweets/#{@tweet.id}/edit",method: :get,class: "edit-article" %>
     <% end %>
-    <%= link_to "トップページへ戻る",tweets_path,class: "return-top"%>
+    <%= link_to "記事一覧へ戻る",tweets_path,class: "return-top"%>
   </div>
   <div class="user_name">
     <h4>投稿者 <%= @tweet.user.nickname%></h4>
