--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -4,10 +4,16 @@
   padding-top: 30px;
 }
 
-.delete-article,.edit-article,.return-top{
+.edit-article,.return-top{
   border: 2px solid #57e963;
   color: #57e963;
   padding: 5px;
+}
+
+.delete-article {
+  padding: 5px;
+  color: #e45454;
+  border: 2px solid #e45454;
 }
 
 .sub_title{
