--- a/app/views/forecasts/_show.html.erb
+++ b/app/views/forecasts/_show.html.erb
@@ -3,10 +3,12 @@
     <div class="school_fcs">
       <div class="win_school">
         <p>勝利予想<p>
+        <br>
         <%= forecast.win_school.name%>
       </div>
       <div class="lose_school">
         <p>敗退予想<p>
+        <br>
         <%= forecast.lose_school.name%>
       </div>
     </div>
@@ -14,7 +16,8 @@
       <%= simple_format(forecast.text)%>
     </div>
     <% if user_signed_in? && forecast.user_id == current_user.id%>
-      <%= link_to "削除","/forecasts/#{forecast.id}",method: :delete,data: { confirm: '削除しますか？' },class: "ays_delete" %>
+      <%= link_to "削除","/forecasts/#{forecast.id}",method: :delete,data: { confirm: '削除しますか？' },class: "fcs_delete" %>
+      <%= link_to "編集","/forecasts/#{forecast.id}/edit",method: :get,class: "fcs_edit" %>
     <% end %>
     <div class="name_ays">
       <%= "投稿者 #{forecast.user.nickname}"%>
