--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -1,7 +1,7 @@
 .user {
   &-content {
     background-color: #EEFFFF;
-    min-height: 100%;
+    height: 100vh;
   }
   &-list {
     margin-top: 10%;
