--- a/app/assets/stylesheets/maps.scss
+++ b/app/assets/stylesheets/maps.scss
@@ -39,6 +39,7 @@
     border-width: 0 2px 2px 2px;
     font-size: 1.2rem;
     background-color: #f6f6d1;
+    min-height: 100px;
   }
   &-school {
     margin-top: 10%;
