--- a/app/views/users/_my_forecasts.html.erb
+++ b/app/views/users/_my_forecasts.html.erb
@@ -7,7 +7,7 @@
       <%= link_to forecast do %>
         <div class="school-fcs">
           <div class="fcs-icon">
-            <i class="fa fa-balance-scale"></i>
+            <i class="fa fa-balance-scale text-white"></i>
           </div>
           <div class="win-school_fcs">
             <p>勝利予想<p>
