--- a/app/assets/stylesheets/maps.scss
+++ b/app/assets/stylesheets/maps.scss
@@ -9,8 +9,8 @@
     font-size: 1.5rem;
   }
   &-content {
-  background-color: #f6f6d1;;
-  min-height: 100%;
+  background-color: #f6f6d1;
+  // min-height: 100%;
   }
   &-card {
   border: none;
@@ -30,7 +30,7 @@
     }
   }
   &-list {
-    margin-top: 10%;
+    // margin-top: 10%;
     display: flex;
     text-align: center;
   }
@@ -68,4 +68,9 @@
   text-align:left;
   border: solid;
   border-width: 0 2px 2px 2px;
+}
+
+.map-contenta {
+  min-height: 70vh;
+  background-color: #f6f6d1;
 }
