--- a/app/views/analyses/show.html.erb
+++ b/app/views/analyses/show.html.erb
@@ -64,32 +64,12 @@
       <i class="fa fa-baseball-ball text-warning"></i>
         コメント
       </div>
-      <% if @comments %>
-        <% @comments.each do |comment| %>
-            <div class="comment-user">
-              <%= @num %>:
-              <strong><%= link_to "#{comment.user.nickname}","/users/#{comment.user.id}",class: "pr-4" %></strong>
-              <%= comment.created_at.strftime("%Y年%m月%d日 %H時%M分")%>
-            <div class="comment-delete">
-              <% if user_signed_in? && current_user.id == comment.user_id || current_user.admin %>
-                <%= link_to '削除', "/analyses/#{@analysis.id}/comment_analyses/#{comment.id}", method: :delete,class: "comment_delete-button" %>
-              <% end %>
-            </div>
-            </div>
-          <div class="mt-4 mb-4">
-            <%= simple_format(comment.text) %>
-          </div>
-          <%@num+=1%>
-        <% end %>
-      <% end %>
+      <div id="comments_area">
+        <%= render partial: '/comment_analyses/comment', locals: { comments: @comments }%>
+      </div>
     </div>
     <div class="comment-form"> 
-    <% if current_user %>
-      <%= form_with(model:[@analysis, @comment], method: :post) do |f| %>
-        <%= f.text_area :text,placeholder: "コメント",rows: "2",cols: "30" %>
-        <%= f.submit "SEND",class: "game_record"%>
-      <% end %>
-    <% end %>
+      <%= render partial: 'comment_analyses/form', locals: { comment: @comment, analysis: @analysis } %>
     </div>
   </div>
 </div>
