--- a/app/views/champions/show.html.erb
+++ b/app/views/champions/show.html.erb
@@ -22,17 +22,18 @@
   <div class="text-format">
     <%= @category.name %>
   </div>
-  <% @category_parent_array.each do |tournament|%>
   <%# 大会別 %>
-    <% unless current_page?("/champions/#{tournament.id}") %>
-      <div class="cp-tournamet mt-5 mb-5">
-        <%= link_to "/champions/#{tournament.id}",data: {"turbolinks" => false},class: "text-white" do%>
-          <i class="fa fa-baseball-ball text-white"></i>
-          <%=tournament.name%>
-        <% end %>
-      </div>
+  <div class="title mt-5 mb-5">
+    <% @category_parent_array.each do |tournament|%>
+      <% unless current_page?("/champions/#{tournament.id}") %>
+        <%# <div class="cp-tournamet mt-5 mb-5"> %>
+          <%= link_to "/champions/#{tournament.id}",data: {"turbolinks" => false},class: "title-child text-white" do%>
+            <i class="fa fa-baseball-ball text-white"></i>
+            <%=tournament.name%>
+          <% end %>
+      <% end %>
     <% end %>
-  <% end %>
+  </div>
   <div class="text-format ">
     投票結果
   </div>
